# rocket-env

./: .pypirc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  clean_requirements.txt  example.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
old_pkg/: README.md
src/: setup.py
src/rocket_env/: __init__.py
src/rocket_env/envs/: README.md  __init__.py  rocket_env.py  rocket_env_fins.py  rocket_env_phase2.py
src/rocket_env/utils/: simulator.py
src/rocket_env/wrappers/: wrappers.py
src/rocket_envs/: __init__.py  rocket_env.py
tests/: test_6DOF_environment.py  test_environment_no_fins.py  test_rocket_env.py
